--- a/Topic 3 Monogame/Topic 3 Monogame.csproj
+++ b/Topic 3 Monogame/Topic 3 Monogame.csproj
@@ -11,6 +11,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Content\Star Trek Song.mp3" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
   </ItemGroup>
